2008-09-25  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Use the gui manager to resume internally stopped
	  threads.
	* Convert.cs: Fix object conversion.
	* ObjectUtil.cs: Make GetTypeDisplayData more robust.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp: Updated projects.

2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Fill the Exception property for the Exception and
	  UnhandledException events.

2008-08-29  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Fix build.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MyTextReader.cs, Expression.cs: Remove unused stuff.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp: Fix reference to Mono.TextEditor. The
	  incorrect add-in version number causes problems in the makefile
	  synchronization.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Optimize backtrace retrieval (trying to get the
	  unmanaged backtrace when the current frame is managed is slow).
	* Util.cs: Ignore properties which don't have a getter.
	* ObjectUtil.cs: Added null check.

2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Add support for live hit count and trace updating.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Provide a location when creating a ThreadInfo.

2008-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Report module loading. Fixed break command.

2008-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* ObjectUtil.cs: Added hack to make the proxy attribute work for
	  generic types.
	* CollectionAdaptor.cs: Don't try to create a collection adaptor for
	  generic types. It won't work.

2008-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, Util.cs, ExpressionEvaluator.cs,
	  Mono.Debugging.Server.Mdb.mdp, ValueReference.cs,